tests/snapshots/run_wpt_conformance__trtx_greaterOrEqual_float32_broadcast_3D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "greater_or_equal.https.any.js",
    "greaterOrEqual float32 broadcast 3D to 4D",
    "trtx",
    Failed {
        msg: Some(
            "greater_or_equal :: greaterOrEqual float32 broadcast 3D to 4D: index 2: actual=0 expected=1 tolerance=0\n  inputs: inputA: [-8.049108505249023, -5.522611141204834, -2.097508192062378, -7.455326557159424, -5.450376510620117, 9.802918434143066, -3.604517936706543, 4.088084697723389, -5.068355083465576, 1.5821936130523682, 5.675583839416504, -4.34159517288208, 1.694622278213501, 2.926734685897827, -7.00007438659668, -2.5270822048187256, 1.4437267780303955, 7.862768650054932, 5.782289028167725, 1.8712012767791748, -0.5233999490737915, 0.4343328773975372, 8.93836498260498, 1.6568396091461182]; inputB: [-3.2823047637939453, -1.3975636959075928, 0.49053606390953064, -6.882648944854736]\n  expected output: [0, 0, 1, 0, 0, 1, 0, 1, 0, 1 ...] (len=24)\n  actual output: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ...] (len=24)\n  expected output full nd:\n[0, 0, 1, 0, 0, 1, 0, 1, 0, 1, ...] (len=24, shape=[2, 2, 2, 3])\n  actual output full nd:\n[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...] (len=24, shape=[2, 2, 2, 3])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: f32[2, 2, 2, 3];\n    inputB: f32[2, 2, 1];\n  }\n\n  nodes {\n    [output] = greaterOrEqual(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
