tests/snapshots/run_wpt_conformance__trtx_greater_float16_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "greater.https.any.js",
    "greater float16 1D constant tensors",
    "trtx",
    Failed {
        msg: Some(
            "greater :: greater float16 1D constant tensors: index 0: actual=0 expected=1 tolerance=0\n  inputs: inputB: [-6.15625, -4.0234375, 5.953125, 2.306640625, -2.76953125, -0.97119140625, 1.22265625, 4.58984375, 9.1015625, -4.99609375, -4.80859375, 8.921875, 0.900390625, -2.841796875, -2.828125, 8.4765625, -7.83984375, 9.2109375, 4.98046875, -2.5078125, -4.51953125, 8.3515625, -6.16015625, 0.736328125] (constant); inputA: [-5.39453125, -7.1875, -3.107421875, 4.9765625, 5.11328125, -1.5390625, 1.4140625, -0.93603515625, -6.03125, -3.013671875, 0.1708984375, 7.39453125, 7.1796875, -4.828125, -2.01953125, -3.267578125, 8.9453125, -5.93359375, 0.70703125, 2.77734375, 0.97900390625, -6.25390625, 4.41015625, -6.7734375] (constant)\n  expected output: [1, 0, 0, 1, 1, 0, 1, 0, 0, 1 ...] (len=24)\n  actual output: [0, 0, 128, 63, 0, 0, 0, 0, 0, 0 ...] (len=24)\n  expected output full nd:\n[1, 0, 0, 1, 1, 0, 1, 0, 0, 1, ...] (len=24, shape=[24])\n  actual output full nd:\n[0, 0, 128, 63, 0, 0, 0, 0, 0, 0, ...] (len=24, shape=[24])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  consts {\n    operand_0: f16[24] @bytes([40, 198, 6, 196, 244, 69, 157, 64, 138, 193, 197, 187, 228, 60, 151, 68, 141, 72, 255, 196, 207, 196, 118, 72, 52, 59, 175, 193, 168, 193, 61, 72, 215, 199, 155, 72, 251, 68, 4, 193, 133, 196, 45, 72, 41, 198, 228, 57]);\n    operand_1: f16[24] @bytes([101, 197, 48, 199, 55, 194, 250, 68, 29, 69, 40, 190, 168, 61, 125, 187, 8, 198, 7, 194, 120, 49, 101, 71, 46, 71, 212, 196, 10, 192, 137, 194, 121, 72, 239, 197, 168, 57, 142, 65, 213, 59, 65, 198, 105, 68, 198, 198]);\n  }\n\n  nodes {\n    [output] = greater(operand_1, operand_0, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
